Add sourceType module to eslintrc.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,8 +2,10 @@
 	"extends": "eslint:recommended",
   "parserOptions": {
     "ecmaVersion": 6,
+    "sourceType": "module",
     "ecmaFeatures": {
       "impliedStrict": true,
+      "modules": true,
       "jsx": true
     }
   },
@@ -15,6 +17,7 @@
   "env": {
     "browser": true,
     "node": true,
+    "es6": true,
     "jquery": true
   },
   "globals": {
